Start making a collection for kinematics theory

--- a/main.tex
+++ b/main.tex
@@ -16,16 +16,10 @@
 \begin{document}
 
 \title{
-	\mymaketitle{Robotics}
+	\mymaketitle{Kinematics in Robotics}
 }
 
 \date{October 27, 2019}
-\author{
-	Simon Grottrup\\
-	Morten Bech\\
-	Marc Friis Torkelund\\
-	Morten Jesper Nielsen\\
-}
 
 %\listoftodos % Creates the todo-content list
 
